<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/pending_todos"
            android:icon="@drawable/cardview_options"
            android:title="@string/nav_pending_todos_text"
            />
        <item
            android:id="@+id/completed_todos"
            android:icon="@drawable/cardview_complete"
            android:title="@string/nav_completed_todos_text" />
        <item
            android:id="@+id/tags"
            android:icon="@drawable/ic_apps"
            android:title="@string/nav_tags_text" />
        <item
            android:id="@+id/settings"
            android:checkable="false"
            android:enabled="false"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings_text"
            android:visible="false" />
    </group>

    <item android:title="Extra">
        <menu>
            <item
                android:id="@+id/facebook"
                android:checkable="false"
                android:enabled="false"
                android:icon="@drawable/ic_find_in_page"
                android:title="@string/nav_find_on_facebook_text"
                android:visible="false" />
            <item
                android:id="@+id/github"
                android:icon="@drawable/ic_location_searching"
                android:title="@string/nav_find_on_github_text" />
            <item
                android:id="@+id/rate_us"
                android:checkable="false"
                android:enabled="false"
                android:icon="@drawable/ic_star_border"
                android:title="@string/nav_rate_us_text"
                android:visible="false" />
            <item
                android:id="@+id/share"
                android:checkable="false"
                android:enabled="false"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share_app_text"
                android:visible="false" />
            <item
                android:id="@+id/more_apps"
                android:checkable="false"
                android:enabled="false"
                android:icon="@drawable/ic_apps"
                android:title="@string/nav_more_apps_text"
                android:visible="false" />
        </menu>
    </item>

</menu>
