<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/search"
        android:title="@string/option_completed_search_text"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/delete_all"
        android:icon="@drawable/ic_delete_completed_todos"
        android:title="@string/option_completed_delete_text"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings"
        android:enabled="false"
        android:icon="@drawable/ic_white_settings"
        android:title="@string/option_completed_settings_text"
        android:visible="false"
        app:showAsAction="never" />
</menu>