<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/completed_card_view_margin_left"
        android:layout_marginTop="@dimen/completed_card_view_margin_top"
        android:layout_marginRight="@dimen/completed_card_view_margin_right"
        android:layout_marginBottom="@dimen/completed_card_view_margin_bottom"
        android:elevation="@dimen/completed_card_view_elevation">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/todo_panel" />

        <RelativeLayout
            android:id="@+id/each_completed_todo_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/completed_todo_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="8sp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/play_bold"
                android:text="@string/completed_todo_demo_title"
                android:textColor="@color/darkBrownFont"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/completed_todo_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/completed_todo_title"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/play_bold"
                android:text="@string/completed_todo_demo_content"
                android:textColor="@color/fontColorPanel"
                android:textSize="@dimen/completed_todo_content_text_size" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/completed_todo_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="@dimen/pending_todo_info_section_bottom_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/todo_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/play_bold"
                    android:text="@string/todo_info_demo_tag_text"
                    android:textColor="@color/fontColorPanel"
                    android:textSize="@dimen/todo_info_section_text_size" />

                <TextView
                    android:id="@+id/todo_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/todo_info_section_margin_right"
                    android:fontFamily="@font/play_bold"
                    android:text="@string/todo_info_demo_date_text"
                    android:textColor="@color/fontColorPanel"
                    android:textSize="@dimen/todo_info_section_text_size" />

                <TextView
                    android:id="@+id/todo_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/play_bold"
                    android:text="@string/todo_info_demo_time_from_text"
                    android:textColor="@color/fontColorPanel"
                    android:textSize="@dimen/todo_info_section_text_size" />


            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>