<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.Beemish.HerosJournal.activities.MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/pending_todos_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/panel"
        android:layout_width="match_parent"
        android:layout_height="168dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:cropToPadding="true"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/panel" />

    <LinearLayout
        android:id="@+id/no_pending_todo_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/pending_todos_icon"
            android:layout_width="150dp"
            android:layout_height="69dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/pending_todo_icon_margin"
            app:srcCompat="@drawable/no_completed_todos3" />

        <TextView
            android:id="@+id/no_pending_todo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/play_bold"
            android:text="@string/no_pending_todo_text"
            android:textColor="@color/mainBGColor"
            android:textSize="@dimen/no_pending_todo_title_size" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabAddTodo"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="186dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:src="@drawable/ic__add_new_todo"
        android:tint="@color/colorAccentRed"
        app:backgroundTint="@color/paperColor" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/borderImage"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="13dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="13dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/stat_table_margin"
            android:gravity="center_vertical|center_horizontal|center">

            <TextView
                android:id="@+id/healthLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/teko"
                android:text="@string/healthLabel"
                android:textColor="@color/fontColorPanel"
                android:textSize="18sp"
                android:typeface="normal" />

            <ProgressBar
                android:id="@+id/healthProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/stat_progress_bar_margin_left"
                android:progressDrawable="@android:color/holo_green_light" />

            <TextView
                android:id="@+id/healthStats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/stat_progress_numbers_margin_left"
                android:gravity="center_vertical|center"
                android:text="@string/health_number_demo" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:gravity="center_vertical|center_horizontal|center">

            <TextView
                android:id="@+id/manaLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/teko"
                android:gravity="center"
                android:text="@string/manaLabel"
                android:textColor="@color/fontColorPanel"
                android:textSize="18sp" />

            <ProgressBar
                android:id="@+id/manaProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/stat_progress_bar_margin_left"
                android:progressDrawable="@android:color/holo_blue_dark" />

            <TextView
                android:id="@+id/manaStats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/stat_progress_numbers_margin_left"
                android:gravity="center_vertical|center"
                android:text="@string/mana_number_demo" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/stat_row_margin"
            android:gravity="center_vertical|center_horizontal|center">

            <TextView
                android:id="@+id/expLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/teko"
                android:gravity="center"
                android:text="@string/expLabel"
                android:textColor="@color/fontColorPanel"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/expProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="100dp"
                android:layout_height="16dp"
                android:layout_marginLeft="@dimen/stat_progress_bar_margin_left"
                android:progressDrawable="@android:color/holo_orange_light" />

            <TextView
                android:id="@+id/expStats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/stat_progress_numbers_margin_left"
                android:gravity="center_vertical|center"
                android:text="@string/exp_number_demo" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/levelLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/teko"
                android:gravity="right"
                android:text="@string/levelLabel"
                android:textColor="@color/fontColorPanel"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/levelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="1"
                android:textColor="@color/colorPrimaryRed"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

    <ImageView
        android:id="@+id/avatarBackground"
        android:layout_width="142dp"
        android:layout_height="152dp"
        android:layout_alignBottom="@+id/borderImage"
        android:layout_alignLeft="@+id/borderImage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/borderImage"
        android:layout_alignTop="@+id/borderImage"
        android:layout_marginLeft="8dp"
        android:padding="6dp"
        app:srcCompat="@drawable/avatar_bg" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="142dp"
        android:layout_height="152dp"
        android:layout_alignBottom="@+id/borderImage"
        android:layout_alignLeft="@+id/borderImage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/borderImage"
        android:layout_alignTop="@+id/borderImage"
        android:layout_marginLeft="8dp"
        android:padding="4dp"
        app:srcCompat="@drawable/avatar_white_plaine_eyes" />
    <ImageView
        android:id="@+id/avatarShirt"
        android:layout_width="142dp"
        android:layout_height="152dp"
        android:layout_alignBottom="@+id/borderImage"
        android:layout_alignLeft="@+id/borderImage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/borderImage"
        android:layout_alignTop="@+id/borderImage"
        android:layout_marginLeft="8dp"
        android:padding="4dp"
        app:srcCompat="@drawable/gear_shirt_blue" />
    <ImageView
        android:id="@+id/avatarHelment"
        android:layout_width="142dp"
        android:layout_height="152dp"
        android:layout_alignBottom="@+id/borderImage"
        android:layout_alignLeft="@+id/borderImage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/borderImage"
        android:layout_alignTop="@+id/borderImage"
        android:layout_marginLeft="8dp"
        android:padding="4dp"
        app:srcCompat="@drawable/gear_helment_bucket" />
    <ImageView
        android:id="@+id/avatarSword"
        android:layout_width="142dp"
        android:layout_height="152dp"
        android:layout_alignBottom="@+id/borderImage"
        android:layout_alignLeft="@+id/borderImage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/borderImage"
        android:layout_alignTop="@+id/borderImage"
        android:layout_marginLeft="8dp"
        android:padding="4dp"
        app:srcCompat="@drawable/gear_sword_wooden" />

    <ImageView
        android:id="@+id/borderImage"
        android:layout_width="125dp"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/avatar_border" />

    <Button
        android:id="@+id/SpriteStatsButton"
        android:layout_width="124dp"
        android:layout_height="120dp"
        android:layout_alignStart="@+id/borderImage"
        android:layout_alignLeft="@+id/borderImage"
        android:layout_alignTop="@+id/borderImage"
        android:layout_alignEnd="@+id/avatarBackground"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="-1dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:onClick="onClick" />

</RelativeLayout>
